Tidy up, use Paths.get() not Path.of()
Signed-off-by: Eddie Hung <eddie.hung@amd.com>